Re-escrito resumen

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -55,7 +55,7 @@
 \modulolinenumbers[5]
 %\linenumbers
 
-%\input{resumen}
+\input{resumen}
 \input{justificacion}
 \input{metodologia}
 \input{riesgos}
