--- a/metodologia.tex
+++ b/metodologia.tex
@@ -58,7 +58,7 @@ La duración total del proyecto es de $466$ horas, con una dedicación de $20$ h
 		\item Instalación y configuración de la plataforma de desarrollo. (12hs)
 		\item Implementación de funcionalidad de captura de tráfico de red. (24hs)
 		\item Implementación de modelado de tráfico. (24hs)
-		\item Implementación de intefaz web. (24hs)
+		\item Implementación de interfaz web. (24hs)
 	\end{enumerate}
 	\item \textbf{Detección de anomalías} (98hs)
 	\begin{enumerate}
