--- a/resumen.tex
+++ b/resumen.tex
@@ -3,5 +3,5 @@
 En la actualidad las redes informáticas están presentes en nuestro día a día, así como también en las operaciones diarias de prácticamente cualquier organización. Debido a la demanda masiva de servicios on-line, el tamaño y el volumen de datos que manejan las entidades que proveen estos servicios incrementa año tras año. Por esto, las herramientas que facilitan la tarea de administración y diagnóstico de redes son de gran utilidad para ofrecer un servicios de mejor calidad, y aprovechar la utilización de recursos existentes. Aún más importante son aquellas herramientas que sirven para detectar ataques que puedan comprometer los datos que estas organizaciones manejan.
 Este documento describe un proyecto para el desarrollo de un sistema de detección de intrusiones basado en la detección de anomalías para la Secretaría de Tecnologías para la Gestión de la ciudad de Santa Fe.
 
-\paragraph{Palabras claves} \textit{intrusion detection system}, \textit{redes informáticas}, \textit{Data Streaming}, \textit{monitoreo}, \textit{seguridad}
+\paragraph{Palabras claves} \textit{intrusion detection system}, \textit{redes informáticas}, \textit{data streaming}, \textit{monitoreo}, \textit{seguridad}
 \newpage
