--- a/riesgos.tex
+++ b/riesgos.tex
@@ -77,6 +77,7 @@ En esta sección se muestra el análisis realizado de los riesgos del proyecto, 
 	\end{minipage}
 \end{table}
 
+\newpage
 
 \section*{Presupuesto}
 
@@ -110,7 +111,7 @@ A continuación se detalla el presupuesto necesario para el desarrollo del proye
 		Toner & & & \$200 \\
 		Artículos de librería & & & \$150 \\
 		\hline \hline
-		\textbf{Recursos humanos} & \textbf{Costo por hora} & \textbf{Horas} \\
+		\textbf{Recursos humanos} & \textbf{Costo por hora} & \textbf{Horas} & \\
 		Director de proyecto & \$150 & 40 & \$6000 \\
 		Codirector de proyecto & \$150 & 40 & \$6000 \\
 		Diseñador & \$110 & 84 & \$9420 \\
