--- a/metodologia.tex
+++ b/metodologia.tex
@@ -2,7 +2,7 @@
 
 La metodología de desarrollo del proyecto será incremental e iterativa. Incremental porque varios componentes y funcionalidades del sistema se desarrollarán en momentos diferentes y serán integradas cuando sean completadas. Iterativa pues se invertirán esfuerzos en revisar constantemente partes del sistema, tanto para mejorar la calidad externa como interna del software\cite{ISOIEC9126}.
 
-Dado que los requerimientos de los interesados pueden cambiar en el transcurso de la ejecución del proyecto, se propone utilizar un enfoque de desarrollo ágil. El mismo contempla la posibilidad de cambios en los alcances y en las prioridades de las diferentes funcionalidades, y fundamentalmente promueve la entrega continua de software y la inclusión de los interesados en el proceso de desarrollo.
+Dado que los requerimientos de los interesados pueden cambiar en el transcurso de la ejecución del proyecto, se propone utilizar un enfoque de desarrollo ágil. El mismo contempla la posibilidad de priorización y selección en los alcances y en las prioridades de las diferentes funcionalidades, y fundamentalmente promueve la entrega continua de software y la inclusión de los interesados en el proceso de desarrollo.
 
 \section*{Plan de Tareas}
 
@@ -11,7 +11,7 @@ El proyecto se divide en 5 incrementos. A continuación se da una breve descripc
 \paragraph{Incremento 1: Investigación preliminar}\
 La primer parte del proyecto consiste en determinar que conjunto de tecnologías serán utilizadas, y elaborará una descripción a alto nivel de las diferentes componentes del sistema. Además se realizará una investigación sobre las técnicas de modelado de comportamiento existentes con el fin de determinar cuales serán implementadas.
 \paragraph{Incremento 2: Modelado de comportamiento} \
-En esta etapa se implementarán algunas de las técnicas de modelado de comportamiento seleccionadas. Se utilizarán solo los datos provenientes de la capa de transporte y se entregará un software con una interfaz web sencilla donde se muestren los principales parámetros del modelado.
+En esta etapa se implementarán las técnicas de modelado de comportamiento seleccionadas en el incremento anterior. Se utilizarán solo los datos provenientes de la capa de transporte y se desarrollará un software con una interfaz web sencilla donde se muestren los principales parámetros del modelado.
 \paragraph{Incremento 3: Detección de anomalías} \
 Se implementarán las funcionalidades de detección de anomalías y se agregará al software mecanismos de generación de alarmas. Además se mejorará la interfaz de usuario.
 \paragraph{Incremento 4: Modelado de comportamiento de subsistemas} \
