--- a/resumen.tex
+++ b/resumen.tex
@@ -1,7 +1,7 @@
 \section*{Resumen}
 
-En la actualidad las redes informáticas están presentes en nuestro día a día, así como también en las operaciones diarias de prácticamente cualquier organización. Debido a la demanda masiva de servicios on-line, el tamaño y el volumen de datos que manejan las entidades que proveen estos servicios incrementa año tras año. Por esto, las herramientas que facilitan la tarea de administración y diagnóstico de redes son de gran utilidad para ofrecer un servicios de mejor calidad, y aprovechar la utilización de recursos existentes. Aún más importante son aquellas herramientas que sirven para detectar ataques que puedan comprometer los datos que estas organizaciones manejan.
-Este documento describe un proyecto para el desarrollo de un sistema de detección de intrusiones basado en la detección de anomalías para la Secretaría de Tecnologías para la Gestión de la ciudad de Santa Fe.
+En la actualidad las redes informáticas están presentes en nuestro día a día, así como también en las operaciones diarias de prácticamente cualquier organización. Debido a la demanda masiva de servicios on-line, el tamaño y el volumen de datos que manejan las entidades que proveen estos servicios incrementa año tras año. Por esto, las herramientas que facilitan la tarea de administración y diagnóstico de redes son esenciales para ofrecer un servicios de mejor calidad, y aprovechar al máximo la utilización de recursos existentes. Aún más críticas son aquellas herramientas que permiten detectar ataques que atentan contra los datos que estas organizaciones manejan.
+Este documento describe un proyecto de desarrollo de un sistema de detección de anomalías basado en detección de comportamiento para la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe. En la primera sección se describe el problema a solucionar y algunas herramientas disponibles en la actualidad. Luego se definen los objetivos y alcances del proyecto y la metodología propuesta para su desarrollo. A continuación se describe el plan de tareas y los informes de avance que se esperan obtener en cada etapa. Finalmente se identifican los riesgos y se estiman los costos del proyecto.
 
-\paragraph{Palabras claves} \textit{intrusion detection system}, \textit{redes informáticas}, \textit{data streaming}, \textit{monitoreo}, \textit{seguridad}
+\paragraph{Palabras claves} \textit{intrusion detection system}, \textit{redes informáticas}, \textit{data streaming}, \textit{monitoreo}, \textit{seguridad informática}
 \newpage
