--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -15,7 +15,7 @@
 
 \bibliography{anteproyecto}
 
-\SetWatermarkText{BORRADOR}
+\SetWatermarkText{}
 \SetWatermarkScale{5}
 \SetWatermarkLightness{0.95}
 
@@ -42,9 +42,9 @@
 
 	\vfill
 	
-	Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
+	%Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
 	
-	\vfill
+	%\vfill
 	
 	% Bottom of the page
 	\large Santa Fe\par
