--- a/justificacion.tex
+++ b/justificacion.tex
@@ -24,7 +24,7 @@ Diseñar un sistema de detección de anomalías basado en detección de comporta
 
 \subsubsection*{Funcionales}
 \begin{itemize}
-	\item El sistema utilizará información de capa de red\cite{rfc791} y capa de transporte\cite{rfc793}\cite{rfc1180}, e información proveniente de logs de servidores web y gestores de bases de datos.
+	\item El sistema utilizará información de capa de red\cite{rfc791} y capa de transporte\cite{rfc793}\cite{rfc1180}.
 	\item Los datos serán procesados utilizando técnicas de \textit{data streaming}\cite{Fischer:2012:RVA:2245276.2245432}
 	\item El sistema identificará potenciales comportamientos anómalos y generará las alarmas correspondientes.
 	\item Con cada alarma, el sistema mostrará con que probabilidad se clasificó el evento (factor de riesgo).
