Excluido del alcance IPv6. También se modificó la carátula del documento

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -28,14 +28,15 @@
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.25\textwidth]{Universidad_del_Litoral}\par\vspace{1cm}
-	{\scshape\LARGE Universidad Nacional del Litoral \par}
-	\vspace{1cm}
+	{\scshape\LARGE Universidad Nacional del Litoral \par}	
+	%\vspace{1cm}
 	{\scshape\Large Proyecto Final de Carrera\par}
 	\vspace{1.5cm}
 	{\huge\bfseries Diseño de un sistema de detección de anomalías en redes de computadoras.\par}
-	\vspace{2cm}
-	{\Large\itshape Pineda Leandro\par}
-	\vfill
+	\vspace{6cm}
+	realizado por \par
+	{\Large\itshape Leandro Pineda\par}
+	\vspace{1cm}
 	dirigido por Ing. Miguel Angel Robledo\par
 	codirigido por Ing. Gabriel Filippa
 	
@@ -48,7 +49,7 @@
 	
 	% Bottom of the page
 	\large Santa Fe\par
-	{\large \today\par}
+	{Septiembre de 2016 \par}
 	
 \end{titlepage}
 
