Correcciones de la cátedra

--- a/justificacion.tex
+++ b/justificacion.tex
@@ -4,20 +4,21 @@ La integridad de estos sistemas puede verse comprometida principalmente por dos 
 La utilización de herramientas clásicas para implementar políticas de seguridad como firewall, lista de control de acceso, credenciales de usuario, proxy de red entre otros, resultaba adecuado 10 años atrás, pero en la actualidad estas herramientas están siendo cada vez menos efectivas en la tarea de bloquear ataques dirigidos y malware avanzados. Esto hace que cada vez sea más común la utilización de otros métodos que monitorean continuamente eventos en busca de patrones que puedan indicar comportamientos anómalos en el tráfico de red, provocados tanto por ataques como por fallas en los dispositivos de red. Los sistemas de detección/prevención de intrusiones (IDS o IPS por las siglas en inglés \textit{Intrusion Detection/Prevention System}) pueden realizar esta tarea utilizando dos enfoques: detección de uso indebido o \textit{signature-based detection} y detección de anomalías o \textit{anomaly-based detection}\cite{Milenkoski:2015:ECI:2808687.2808691}. En el primer caso, el sistema determina la ocurrencia de ataques comparando la actividad de la red y de los subsistemas que la componen, contra un conjunto de patrones de ataques conocidos. Si los patrones coinciden, el ataque es informado y pueden tomarse medidas al respecto. En el segundo caso, se modela el comportamiento normal de la red y se usa como base para buscar comportamientos anómalos, los cuales pueden ser provocados por fallas o indicadores de potenciales ataques. \par
 Como alternativa a las soluciones de hardware dedicado o sistemas privativos que ofrecen algunas empresas, la comunidad de software libre desarrolla y mantiene la aplicación Snort\footnote{https://www.snort.org/}, un IDS basado en detección de uso indebido. Si bien esta herramienta es efectiva detectando ataques conocidos, es dependiente de la definición de un conjunto efectivo de reglas por parte del administrador (las cuales son difíciles de mantener) y de una base de datos actualizada con los patrones de ataques o \textit{malware}. Otra desventaja de esta técnica de detección es la imposibilidad de detectar ataques \textit{zero-day\footnote{ataques que explotan vulnerabilidades que aún no han sido conocidas o que no están contempladas en al conjunto definido de reglas}}\cite{Milenkoski:2015:ECI:2808687.2808691}. Otra herramienta que suele utilizarse en conjunto con Snort es Bro\footnote{https://www.bro.org/}, una plataforma para análisis de tráfico de red. Sin embargo, Bro también se basa en la definición de reglas de monitoreo y utiliza detección de uso indebido. \par
 
-Con el fin de disponer de otra herramienta para la identificación de comportamientos sospechosos que complemente las funcionalidades de las que se utilizan en la actualidad, el objetivo de este proyecto consiste en diseñar un software que modele de forma automática el comportamiento normal de la red utilizando las técnicas del estado del arte, para identificar y alertar comportamiento anómalo en la infraestructura de red de datos de la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe. El modelo de comportamiento normal es calculado automáticamente por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red.
+Con el fin de disponer de otra herramienta para la identificación de comportamientos sospechosos, el objetivo de este proyecto consiste en diseñar un software que modele de forma automática el comportamiento normal de la red utilizando las técnicas del estado del arte, para identificar y alertar sobre comportamiento anómalo en una infraestructura de red de datos. Esto complementa las funcionalidades de las herramientas basadas en detección de uso indebido dado que el modelado automático de comportamiento hace que no sea necesario utilizar un conjunto de reglas definidas por administradores. El modelo de comportamiento normal del tráfico de la red será calculado por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red de la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe. \par
+Este sistema, al calcular automáticamente el modelo de comportamiento, es fácil de implementar y al utilizar información de la red su implementación requiere pocas modificaciones en los sistemas que se encuentran funcionando.
 
 \section*{Objetivos}
 \subsection*{Generales}
-Diseñar un sistema de detección de anomalías basado en detección de comportamiento.
+Diseñar un sistema de detección de anomalías en redes de datos TCP/IP utilizando técnicas de modelado automático del comportamiento del tráfico de la red.
 \subsection*{Específicos}
 \begin{itemize}
 
 \item Identificar un conjunto de tecnologías y herramientas adecuadas para el diseño del sistema.
+\item Elaborar un documento que describa la arquitectura del sistema.
 \item Determinar las técnicas de modelado de tráfico de red necesarias.
 \item Implementar un software que modele el tráfico normal de red de forma automática, utilizando técnicas no supervisadas.
 \item Implementar un software que genere alertas ante la ocurrencia de eventos anómalos.
 \item Diseñar un sistema que minimice la clasificación de eventos como falsos negativos. Este objetivo es de particular importancia dado que un evento anómalo clasificado como falso negativo es un evento potencialmente dañino considerado como normal.
-\item Elaborar un documento que describa la arquitectura del sistema.
 \end{itemize}
 
 \section*{Alcances}
