--- a/riesgos.tex
+++ b/riesgos.tex
@@ -21,12 +21,12 @@ Se utilizarán tecnologías de virtualización para virtualizar el servidor.
 \textbf{Estrategia a adoptar:} Mitigar (impacto). \\
 El proyecto será desarrollado utilizando datos de prueba generados o base de datos existentes.
 
-\item \textbf{Las técnicas de detección no pueden ser implementadas:} dada su complejidad, algunas técnicas de detección pueden ser difíciles de implementar.
+\item \textbf{Las técnicas de detección no pueden ser implementadas:} dada su complejidad, algunas técnicas de detección pueden ser complejas en su implementación.
 
-\textbf{Probabilidad de ocurrencia:} Alta. \\
+\textbf{Probabilidad de ocurrencia:} Media. \\
 \textbf{Impacto:} Alta. \\
-\textbf{Estrategia a adoptar:} Evitar. \\
-Se recurrirá a asesoramiento experto.
+\textbf{Estrategia a adoptar:} Mitigar (probabilidad). \\
+Se analizarán trabajos previos relacionados y se recurrirá a asesoramiento de expertos.
 
 \end{enumerate}
 
