Arreglada tabla de riesgos

--- a/riesgos.tex
+++ b/riesgos.tex
@@ -9,7 +9,7 @@ En esta sección se enumeran los riesgos identificados, indicadores y estrategia
 \textbf{Probabilidad de ocurrencia:} Baja. \\
 \textbf{Impacto:} Alto. \\
 \textbf{Estrategia a adoptar:} Mitigar (impacto).
-Se utilizarán tecnologías de virtualización para virtualizar el servidor.
+Se utilizarán servidores virtualizados.
 
 \newpage
 
@@ -38,7 +38,7 @@ En esta sección se muestra el análisis realizado de los riesgos del proyecto, 
 	\hline
 	Riesgo & Imp. & \% ocur. & Sev. \\
 	\hline
-	Las técnicas de detección no pueden ser implementadas.  & 4 & 4 & 16 \\
+	Las técnicas de detección no pueden ser implementadas.  & 4 & 3 & 12 \\
 	No se dispone del hardware necesario. & 4 & 2 & 8 \\
 	Pérdida de interés en el proyecto. & 4 & 2 & 8 \\
 	\hline
